fix spacing for left and right

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -26,7 +26,8 @@ input[type="color"] {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--padding);
+  padding: var(--paddingTop) var(--paddingRight) var(--paddingBot)
+    var(--paddingLeft);
 }
 
 .background2 {
